manifests/postgres/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.1 # Sets Image
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432 # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          resources: 
            requests:
              cpu: 100m
            limits:
              cpu: 500m
              memory: 100M
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim
